--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn1 {
+  @apply cursor-pointer  border border-black w-full sm:p-1  mb-2 font-bold text-sm rounded-lg block;
+}
+.btn2 {
+  @apply mr-1 cursor-pointer flex  border border-black w-4/5 sm:p-1  mb-2 font-bold text-sm rounded-lg self-center;
 }
