--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
   @apply text-lightblue-800;
 }
 .btn3 {
-  @apply rounded-2xl px-2 py-1 focus:border-gray-500  focus:outline-none;
+  @apply rounded-2xl sm:px-2 px-1 py-1 focus:border-gray-500  focus:outline-none;
 }
 .figure-container {
   fill: transparent;
